--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
         <div class="intro-text">
           
             <p class="description">
-                Découvrez mes makis artisanaux, préparés avec soin et des ingrédients sélectionnés, à des prix adaptés aux budgets étudiants.
+                Des makis frais, faits maison et à prix étudiant !
             </p>
             <p class="call-to-action">
                 Places limitées – Réservez dès maintenant !
@@ -864,7 +864,7 @@
                     <svg viewBox="0 0 24 24" width="24" height="24">
                         <path fill="#ff6f61" d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
                     </svg>
-                </span> Comment tu t'appelles ?
+                </span>Comment tu t'appelles ?
             </label>
             <input type="text" name="entry.524815907" placeholder="Jean Paul" required>
             <div class="error-message">Veuillez répondre à cette question.</div>
@@ -886,7 +886,7 @@
                 Avant de te préparer tes sushis sur mesure, on a besoin de quelques infos !
             </div>
             <label for="entry.1985104958">
-                <span class="icon">🏠</span> Tu habites dans quelle coloc ?
+                <span class="icon">🏠</span>Tu habites dans quelle coloc ?
             </label>
             <input type="text" name="entry.1985104958" placeholder="b43" required>
             <div class="error-message">Veuillez répondre à cette question.</div>
