--- a/index.html
+++ b/index.html
@@ -907,8 +907,8 @@
             </p>
             
             <div class="btn-group box-quantity-btns">
-                <button type="button" class="select-btn compact-btn" onclick="selectBoxQuantity(this, 1)">1 boîte (6,50 €)</button>
-                <button type="button" class="select-btn compact-btn" onclick="selectBoxQuantity(this, 2)">2 boîtes (13,00 €)</button>
+                <button type="button" class="select-btn compact-btn" onclick="selectBoxQuantity(this, 1)">1 boîte (6 € au lieu de 6.5 €)</button>
+                <button type="button" class="select-btn compact-btn" onclick="selectBoxQuantity(this, 2)">2 boîtes (11 € au lieu de 12.5 €)</button>
             </div>
             <input type="hidden" name="entry.557485338" id="entry.557485338" required>
             <div class="error-message">Veuillez choisir une option.</div>
@@ -1066,7 +1066,7 @@
 
         <!-- Page récapitulative -->
         <div class="question recap-page">
-            <h2>Récapitulatif de votre commande</h2>
+            <h2>Récapitulatif de votre commande, les promos ne sont pas affichées mais seront bien prises en compte lors du paiement</h2>
             <div id="recap-content"></div>
             <div id="recap-price"></div>
             <div class="btn-group">
